# ElementumService

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.gradle  build.gradle.kts  debug.keystore  gradle.md  gradle.properties  gradlew  gradlew.bat  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
ElementumService/: CMakeLists.txt  build.gradle  build.gradle.kts
ElementumService/src/main/: AndroidManifest.xml
ElementumService/src/main/res/drawable/: ic_launcher_foreground.xml  ic_leanback_launcher.xml
ElementumService/src/main/res/mipmap/: ic_launcher.xml
ElementumService/src/main/res/values-af/: strings.xml
ElementumService/src/main/res/values-am/: strings.xml
ElementumService/src/main/res/values-ar/: strings.xml
ElementumService/src/main/res/values-az/: strings.xml
ElementumService/src/main/res/values-bg/: strings.xml
ElementumService/src/main/res/values-bn/: strings.xml
ElementumService/src/main/res/values-ca/: strings.xml
ElementumService/src/main/res/values-cs/: strings.xml
ElementumService/src/main/res/values-de/: strings.xml
ElementumService/src/main/res/values-es-rUS/: strings.xml
ElementumService/src/main/res/values-et/: strings.xml
ElementumService/src/main/res/values-eu/: strings.xml
ElementumService/src/main/res/values-fi/: strings.xml
ElementumService/src/main/res/values-gl/: strings.xml
ElementumService/src/main/res/values-gu/: strings.xml
ElementumService/src/main/res/values-is/: strings.xml
ElementumService/src/main/res/values-it/: strings.xml
ElementumService/src/main/res/values-ja/: strings.xml
(+317 files in other folders)
